testsuite/tests/parser/should_fail/pfail031.alan
hello() : proc
{
  hello(1;
}
