testsuite/tests/parser/should_fail/pfail031.stderr
pfail031.alan:3:10: Error: Parse error on input `;'
	Probably missing `)'

